# phoenix

./: .diff  .dockerignore  .editorconfig  .eslintignore  .flake8  .git-blame-ignore-revs  .git-branches.toml  .gitattributes  .gitconfig  .gitignore  .mcp.json  .mintignore  .oxfmtrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .release-please-manifest.json  .vale.ini  .wb-review.md  AGENTS.md  AGENT_SESSION_ID_REMOVAL_PLAN.md  BUILD.bazel  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSOLIDATION_SCRIPT.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  EMPTY_STATE_AUDIT.md  FIX_SUMMARY.md  IP_NOTICE  LESSONS.md  LICENSE.txt  MIGRATION.md  MODULE.bazel  Makefile  (+68 more)
.agents/: make-review-ready.md
.claude/: bash-command-log.txt  settings.json
.codex/: config.toml  hooks.json
.cursor/: worktrees.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.tours/: app.tour  metrics-for-tabular-data.tour
alyx-data/: .gitignore  README.md  pyproject.toml  run_pipeline.py
alyx-data/docs/: data-schema.md  filter-rules.md  general-analysis-2026-05-01.md
alyx-data/notebooks/: stage2-analysis.ipynb
alyx-data/scripts/: verify_stage1.py
alyx-data/src/analysis/: __init__.py  detectors.py  loaders.py  plots.py
alyx-data/src/pipeline/: __init__.py  config.py  export.py  extract.py  flag.py  trajectories.py
api_docs/: allowlist.txt  blacklist.txt  catalog.yml  generate.py  requirements.txt
api_reference/: DEVELOPER.md  Makefile  README.md  make.bat  requirements.txt
app/: .env.example  .eslintrc-legacy.js  .eslintrc.js  .gitignore  .npmrc  .oxlintrc.json  .oxlintrc.notype.json  .oxlintrc.react-hooks.json  .pnpmfile.cjs  .prettierignore  README.md  chromatic.config.json  esbuild.config.mjs  esbuild.relay.mjs  eslint.config.mts  figma.config.json  global-setup.ts  jest.config.js  jest.setup.ts  mprocs.yaml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  relay.config.js  schema.graphql  stats.html  tsconfig.json  vite.config.mts  vite.config.mts.timestamp-1722284517853-2fe30877d486c.mjs  vite.config.ts  vitest.setup.ts  windowTestConfig.ts
arize_toolbox/: __init__.py
blogs/: code-mode-outline.md  code-mode.md  mcp.md
docs/: Makefile  PROMPT.md  README.md  SUMMARY.md  analytics.js  arize-ecosystem.md  deploying-phoenix.md  deployment.md  docs.json  environments.md  hosted-phoenix.md  install-and-import-phoenix.md  llm-observability.md  notebooks.md  openapi.json  phoenix.mdx  production-guide.md  pxi-server-centric-architecture.md  pxi-server-centric-migration-plan.md  quickstart.md  sitemap.xml  style.css  user-guide.md
evals/: README.md  __init__.py
examples/: README.md  anthropic_evals_persona.ipynb  credit_card_fraud_tutorial.ipynb  dataset.ipynb  dataset_persistance.ipynb  demo.ipynb  fraud.ipynb  memory_query_span.py  psi.ipynb  psi_experiments.ipynb  sentiment_classification_tutorial.ipynb  server.ipynb  showcase.ipynb  taylor_swift_lyrics.ipynb  umap_demo.ipynb  umap_drift.ipynb  using_llamaindex_with_huggingface_models.ipynb
examples/manually-instrumented-chatbot/: .gitignore  Makefile  README.md  compose.yml  pyproject.toml
examples/manually-instrumented-chatbot/chat-service/: Dockerfile  Makefile  export_schema.py  pyproject.toml  requirements.txt
examples/manually-instrumented-chatbot/chat-service/chat/: app.py  types.py
examples/manually-instrumented-chatbot/frontend/: Dockerfile  Makefile  app.py  pyproject.toml  requirements.in  requirements.txt  schema.json
examples/manually-instrumented-chatbot/frontend/frontend/: app.py  request_types.py
examples/manually-instrumented-chatbot/frontend/src/: app.py  request_types.py  utils.py
export/: .env.example  .gitignore  README.md  export_all_projects.py  import_to_arize.py  requirements.txt  utils.py
helm/: Chart.yaml  OAUTH2_CHANGES_SUMMARY.md  OAUTH2_DEPLOYMENT_GUIDE.md  README.md  README.md.gotmpl  example-oauth2-values.yaml  values.yaml
integration-tests/: eval_query_testing.ipynb  graphql_query_performance.ipynb  pagination_queries.ipynb  pagination_query_testing.ipynb
integration_tests/: _helpers.py  conftest.py  mypy.ini  pytest.ini  requirements.txt  ruff.toml
internal_docs/: README.md  dependabot-configuration.md  on_call.md  pxi_playwright_e2e_harness.md
js/: .eslintrc.js  .gitignore  .npmrc  .oxlintrc.json  .pnpmfile.cjs  .prettierignore  .prettierrc.json  DEVELOPMENT.md  README.MD  eslint.config.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.es5.json  tsconfig.base.esm.json  tsconfig.base.esnext.json  tsconfig.base.json  typedoc.json  typedoc.jsonc
kustomize/: README  README.md
llama-index-arize-docs/: add_user_feedback.ipynb  add_user_feedback.py  build_database_compare.py  build_index.py  get_retrieval_data.py  run_evals.py
mcp-ts-quickstart/: .gitignore  .nvmrc  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
migrations/: env.py
mintlify-docs/: phoenix.mdx
mintlify-migration/: docs.json  openapi.json  phoenix.mdx  style.css
mintlify-migrations/: docs.json  image_map.json  not_used.json  style.css
phoenix-cli/: LICENSE  MANIFEST.in  PHOENIX_CLI_SUMMARY.md  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_cli.py
phoenix-cli/examples/: example_usage.py
phoenix-cli/src/phoenix_cli/: __init__.py  cli.py  config.py  export.py  instances.py  phoenix_client.py
prompts/: hallucination.yaml
requirements/: build-graphql-schema.txt  ci.txt  compile-protobuf.txt  dev.txt  format-jupyter-notebooks.txt  gql-build.txt  integration-tests.txt  sync-models.txt  tests.txt  type-check.txt  unit-tests.txt
sample_trajectories/: accountant_trajectory.json  recipe_finder_trajectory.json  stock_analyzer_trajectory.json
schemas/: openapi.json  openapi.yaml  phoenix-cli-1.json  phoenix-cli-settings.json
scripts/: README.md  benchmark_sandbox.py  benchmark_sandbox_results.json  capabilities_poc.py  demo_example_id_key.py  generate_otel_gen_ai_models.py  generate_sitemap.py  load_patronus_trail.py  setup.sh  (+13 more)
(+12334 files in other folders)
