###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(name = "arize-ai")

bazel_dep(name = "rules_python", version = "0.36.0")

# released version is working incorrectly with fetching cross-platform dependencies. fixed in master
# git_override(
#     module_name = "rules_python",
#     commit = "4a262fae88bad2c4f59c7c60a97360c316e64946",
#     remote = "https://github.com/bazelbuild/rules_python",
# )
#
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = False,
    python_version = "3.10",
)
use_repo(python, "python_3_10", "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

# PYREPO = "https://us-central1-python.pkg.dev/primal-oxide-268801/third-party-python/simple/"
#
# REPO_OVERRIDES = {
#     "hdbscan": PYREPO,
#     "graphqlclient": PYREPO,
#     "lightgbm": PYREPO,
#     "rouge-score": PYREPO,
# }

pip.parse(
    experimental_index_url = "https://pypi.org/simple/",
    # experimental_index_url_overrides = REPO_OVERRIDES,
    experimental_target_platforms = [
        "linux_x86_64",
        "osx_*",
    ],
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")

# bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
